--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <script src="/code.js"></script>
     <title>The Library</title>
   </head>
   <body>
@@ -15,7 +14,28 @@
     </div>
 
     <div class="container">
-      <div class="addButton"><button class="add">+ Add book</button></div>
+      <div class="addButton">
+        <button id="addButton">Add Book</button>
+      </div>
+      <div id="overlay"></div>
+      <div id="popup" class="popup">
+        <h2>Add Book</h2>
+        <form>
+          <label for="title">Title:</label>
+          <input type="text" id="title" name="title" /><br />
+          <label for="author">Author:</label>
+          <input type="text" id="author" name="author" /><br />
+          <label for="pages">Pages:</label>
+          <input type="number" id="pages" name="pages" /><br />
+          <label>Have you read this book?</label> <br />
+          <input type="checkbox" id="read" name="read" value="yes" />
+          <label for="read">Yes</label><br />
+          <input type="checkbox" id="not-read" name="read" value="no" />
+          <label for="not-read">No</label> <br />
+          <button id="submit" type="submit">Add</button>
+        </form>
+        <button id="close">Close</button>
+      </div>
       <div class="books">
         <div class="book">Book 1</div>
         <div class="book">Book 2</div>
@@ -23,4 +43,5 @@
       </div>
     </div>
   </body>
+  <script src="/code.js"></script>
 </html>
