Submit button creates new divs via DOM manip with info of a new book. Clear data from forms once button press. Need to polish layout next

--- a/index.html
+++ b/index.html
@@ -27,14 +27,9 @@
           <input type="text" id="author" name="author" /><br />
           <label for="pages">Pages:</label>
           <input type="number" id="pages" name="pages" /><br />
-          <label>Have you read this book?</label> <br />
-          <input type="checkbox" id="read" name="read" value="yes" />
-          <label for="read">Yes</label><br />
-          <input type="checkbox" id="not-read" name="read" value="no" />
-          <label for="not-read">No</label> <br />
-          <button id="submit" type="submit">Add</button>
         </form>
         <button id="close">Close</button>
+        <button id="submitBtn" type="submit">Submit</button>
       </div>
       <div class="books">
         <div class="book">Book 1</div>
