remove button and read button added

--- a/index.html
+++ b/index.html
@@ -31,11 +31,7 @@
         <button id="close">Close</button>
         <button id="submitBtn" type="submit">Submit</button>
       </div>
-      <div class="books">
-        <div class="book">Book 1</div>
-        <div class="book">Book 2</div>
-        <div class="book">Book 3</div>
-      </div>
+      <div class="books"></div>
     </div>
   </body>
   <script src="/code.js"></script>
