--- a/index.html
+++ b/index.html
@@ -10,26 +10,35 @@
   <body>
     <div class="header">
       <div>library</div>
-      <button>log in</button>
+      <button class="loginBtn">log in</button>
     </div>
 
     <div class="container">
       <div class="addButton">
-        <button id="addButton">Add Book</button>
+        <button id="addButton">+ Add Book</button>
       </div>
       <div id="overlay"></div>
       <div id="popup" class="popup">
-        <h2>Add Book</h2>
-        <form>
-          <label for="title">Title:</label>
-          <input type="text" id="title" name="title" /><br />
-          <label for="author">Author:</label>
-          <input type="text" id="author" name="author" /><br />
-          <label for="pages">Pages:</label>
-          <input type="number" id="pages" name="pages" /><br />
-        </form>
-        <button id="close">Close</button>
-        <button id="submitBtn" type="submit">Submit</button>
+        <div><h2>Add Book</h2></div>
+          <div class="formContainer">
+          <form>
+              <div>
+              <label for="title">Title:</label>
+              <input type="text" id="title" name="title" required/><br />
+              </div>
+              <div>
+              <label for="author">Author:</label>
+              <input type="text" id="author" name="author" required/><br />
+              </div>
+              <div>
+              <label for="pages">Pages:</label>
+              <input type="number" id="pages" name="pages" required/><br />
+              </div>
+          </form>
+          <button id="close">Close</button>
+          <button id="submitBtn" type="submit">Submit</button>
+        </div>
+        </div>
       </div>
       <div class="books"></div>
     </div>
